correct “double header” pages
use frontmatter instead of `#` tag

--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -3,7 +3,7 @@ id: 5g-on-helium
 title: 5G On Helium
 pagination_label: 5G On Helium
 sidebar_label: Introduction
-description: Helium Documentation
+description: 5G On Helium
 image: https://i.imgur.com/bWAbESE.png
 slug: /5g-on-helium
 ---
@@ -11,8 +11,6 @@ slug: /5g-on-helium
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/5g-on-helium/5gheader.png')} />
-
-# 5G On Helium
 
 Historically many mobile networks are built top-down by service providers (e.g., AT&T and Verizon in
 the United States). However, future networks will likely be a hybrid of large-scale operators and
