--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -3,7 +3,7 @@ id: cbrs-radios
 title: CBRS Radios
 pagination_label: CBRS Radios
 sidebar_label: CBRS Radios
-description: Helium Documentation
+description: CBRS Radios
 image: https://i.imgur.com/bWAbESE.png
 slug: /5g-on-helium/cbrs-radios
 ---
