--- a/docs/5g-on-helium/service-providers.mdx
+++ b/docs/5g-on-helium/service-providers.mdx
@@ -3,7 +3,7 @@ id: service-providers
 title: Service Providers On Helium
 pagination_label: Service Providers
 sidebar_label: Service Providers
-description: Helium Documentation
+description: Service Providers On Helium
 image: https://i.imgur.com/bWAbESE.png
 slug: /5g-on-helium/service-providers
 ---
