--- a/docs/api/console.mdx
+++ b/docs/api/console.mdx
@@ -1,17 +1,15 @@
 ---
 id: console
-title: Console
-pagination_label: Console
-sidebar_label: Console
-description: Helium Documentation
+title: Helium Console API
+pagination_label: Helium Console API
+sidebar_label: Helium Console API
+description: Helium Console API Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /api/console
 ---
 
 import Tabs from '@theme/Tabs'
 import TabItem from '@theme/TabItem'
-
-## Console API
 
 The Console API is a set of HTTP Request that allows you to programatically interact with Console.
 It's the lowest level building block and is ideal for integrating with back-end services, for
