--- a/docs/api/home.mdx
+++ b/docs/api/home.mdx
@@ -1,14 +1,12 @@
 ---
 id: home
-title: Home
-pagination_label: Home
-sidebar_label: Home
-description: Helium Documentation
+title: Helium APIs
+pagination_label: Helium APIs
+sidebar_label: Helium APIs
+description: Helium APIs Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /api
 ---
-
-# Helium APIs
 
 The Helium Network currently exposes the following APIs:
 
