--- a/docs/blockchain/blockchain-primitives.mdx
+++ b/docs/blockchain/blockchain-primitives.mdx
@@ -1,9 +1,9 @@
 ---
 id: blockchain-primitives
-title: Blockchain Primitives
-pagination_label: Blockchain Primitives
-sidebar_label: Blockchain Primitives
-description: Helium Documentation
+title: Helium Blockchain Primitives
+pagination_label: Helium Blockchain Primitives
+sidebar_label: Helium Blockchain Primitives
+description: Helium Blockchain Primitives
 image: https://i.imgur.com/bWAbESE.png
 slug: /blockchain/blockchain-primitives
 ---
@@ -11,8 +11,6 @@ slug: /blockchain/blockchain-primitives
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/blockchain/primitives.png')} />
-
-# Helium Blockchain Primitives
 
 Below are some of the larger components and concepts of the Helium blockchain.
 
