--- a/docs/blockchain/consensus-protocol.mdx
+++ b/docs/blockchain/consensus-protocol.mdx
@@ -1,9 +1,9 @@
 ---
 id: consensus-protocol
-title: Consensus Protocol
-pagination_label: Consensus Protocol
-sidebar_label: Consensus Protocol
-description: Helium Documentation
+title: The Helium Consensus Protocol
+pagination_label: The Helium Consensus Protocol
+sidebar_label: The Helium Consensus Protocol
+description: The Helium Consensus Protocol
 image: https://i.imgur.com/bWAbESE.png
 slug: /blockchain/consensus-protocol
 ---
@@ -11,8 +11,6 @@ slug: /blockchain/consensus-protocol
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/blockchain/consensus.png')} />
-
-# The Helium Consensus Protocol
 
 The Helium blockchain uses a new consensus protocol, called simply the **Helium Consensus
 Protocol**.
