--- a/docs/blockchain/helium-token.mdx
+++ b/docs/blockchain/helium-token.mdx
@@ -1,9 +1,9 @@
 ---
 id: helium-token
-title: Helium Token
-pagination_label: Helium Token
-sidebar_label: Helium Token
-description: Helium Documentation
+title: The Helium Token
+pagination_label: The Helium Token
+sidebar_label: The Helium Token
+description: The Helium Token
 image: https://i.imgur.com/bWAbESE.png
 slug: /blockchain/helium-token
 ---
@@ -11,8 +11,6 @@ slug: /blockchain/helium-token
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/blockchain/heliumtoken.png')} />
-
-# The Helium Token
 
 The Helium Token is the native cryptocurrency and protocol token of the Helium blockchain. Its
 symbol is `HNT`. Prior to the launch of the Helium blockchain, there was no premine of `HNT`. The
