--- a/docs/blockchain/mining.mdx
+++ b/docs/blockchain/mining.mdx
@@ -1,8 +1,8 @@
 ---
 id: mining
-title: Mining & Rewards
-pagination_label: Mining & Rewards
-sidebar_label: Mining & Rewards
+title: Mining and Token Rewards
+pagination_label: Mining and Token Rewards
+sidebar_label: Mining and Token Rewards
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /blockchain/mining
@@ -11,8 +11,6 @@ slug: /blockchain/mining
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/blockchain/mining.png')} />
-
-# Mining and Token Rewards
 
 While there's no exact formula for calculating how much HNT you'll earn over a given period, there
 are some higher-level concepts, design elements, and rules to keep in mind that will help better
