--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -1,9 +1,9 @@
 ---
 id: use-the-network
-title: Use The Network
-pagination_label: Use The Network
-sidebar_label: Use The Network
-description: Helium Documentation
+title: Use the Network
+pagination_label: Use the Helium Network
+sidebar_label: Use the Helium Network
+description: Use the Helium Network
 image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network
 ---
@@ -16,7 +16,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <div class="flex" style={{ border: 'none' }}>
         <img className="headericon" src={useBaseUrl('img/use-the-network/useheader.png')} />
         <div className="headertext">
-          <h1 style={{ marginTop: 0 }}>Use the Helium Network</h1>
+          {/* <h1 style={{ marginTop: 0 }}>Use the Helium Network</h1> */}
           <h2 className="subtitle">
             Thousands of developers and companies rely on the Helium Network for connectivity. Ready
             to join them? Here's where to start.
