--- a/docs/api/blockchain/ouis.mdx
+++ b/docs/api/blockchain/ouis.mdx
@@ -11,9 +11,7 @@ slug: /api/blockchain/ouis
 import Tabs from '@theme/Tabs'
 import TabItem from '@theme/TabItem'
 
-# OUIs
-
-Organization Unique Identifiers
+> Organization Unique Identifiers
 
 OUIs are used to assign part of the global address space to a given set of router addresses.
 Hotspots that see device traffic will look up the router address for the given device OUI and offer
