--- a/docs/blockchain/oracles.mdx
+++ b/docs/blockchain/oracles.mdx
@@ -1,9 +1,9 @@
 ---
 id: oracles
-title: Oracles
-pagination_label: Oracles
-sidebar_label: Oracles
-description: Helium Documentation
+title: HNT Price Oracles
+pagination_label: HNT Price Oracles
+sidebar_label: HNT Price Oracles
+description: HNT Price Oracles
 image: https://i.imgur.com/bWAbESE.png
 slug: /blockchain/oracles
 ---
@@ -11,8 +11,6 @@ slug: /blockchain/oracles
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/blockchain/oracle.png')} />
-
-# HNT Price Oracles
 
 HNT converts to Data Credits at a rate pegged to `$.00001` , and so the blockchain requires a
 canonical `HNT/$USD` price for this conversion. Beginning in June 2020, the Helium blockchain
