--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -25,23 +25,13 @@ Every epoch, the current consensus group mines approximately 30 blocks on the bl
 block, Hotspots perform various types of work and are awarded according to the following
 distribution:
 
-| Reward Type           | Chain Variable          | Description                                                                                                                                  |
-| :-------------------- | :---------------------- | :------------------------------------------------------------------------------------------------------------------------------------------- |
-| PoC Challengees       | poc_challengees_percent | Awarded to any Hotspot that transmits a PoC packet after being targeted by the challenger.                                                   |
-| PoC Challenger        | poc_challengers_percent | Rewarded to any **Validator\*** that creates a valid PoC challenge and submits the corresponding receipt to the blockchain. (see note below) |
-| Witnesses             | poc_witnesses_percent   | Distributed to selected Hotspots that witness a beacon packet as part of a PoC Challenge.                                                    |
-| Consensus Group       | consensus_percent       | Divided equally among the Validators that are part of the outgoing Consensus Group, responsible for mining blocks.                           |
-| Security              | securities_percent      | Awarded to Network investors who hold Security Tokens.                                                                                       |
-| Network Data Transfer | dc_percent              | Distributed each epoch to Hotspots that route LoRaWAN sensor data for sensors on the Network during that epoch.                              |
-
-:::note
-
-[HIP55](https://github.com/helium/HIP/blob/main/0055-validator-challenges.md) moved the
-resposibiility of creating PoC Challenges to Validators, and as such PoC Rewards (chain_var
-`pos_challengers_percent`) are now awarded to any Validator that creates a valid PoC challenge and
-submits the corresponding receipt to the blockchain.
-
-:::
+| Reward Type           | Chain Variable          | Description                                                                                                        |
+| :-------------------- | :---------------------- | :----------------------------------------------------------------------------------------------------------------- |
+| PoC Challengees       | poc_challengees_percent | Awarded to any Hotspot that transmits a PoC packet.                                                                |
+| Witnesses             | poc_witnesses_percent   | Distributed to selected Hotspots that witness a beacon packet.                                                     |
+| Consensus Group       | consensus_percent       | Divided equally among the Validators that are part of the outgoing Consensus Group, responsible for mining blocks. |
+| Security              | securities_percent      | Awarded to Network investors who hold Security Tokens.                                                             |
+| Network Data Transfer | dc_percent              | Distributed each epoch to Hotspots that route LoRaWAN sensor data for sensors on the Network during that epoch.    |
 
 **_Do I Have To Actively Participate to Earn Rewards Once My Hotspot is Deployed?_**
 
@@ -85,7 +75,6 @@ types:
 
 | Reward Type           | Percentage      | HNT Earned by Reward Type |
 | :-------------------- | :-------------- | :------------------------ |
-| PoC Challenger        | 0.85%           | 14.7236                   |
 | PoC Challengees       | 4.73% - 12.23%  | 82.1247 - 212.331         |
 | Witnesses             | 18.92% - 48.92% | 328.4989 - 849.3323       |
 | Consensus Group       | 6%              | 104.1667                  |
@@ -101,7 +90,7 @@ In the above table, you can see the maximum allotted rewards per reward type fol
 currently scheduled for **August 1, 2023** and will be updated along with changes related to the
 havening to maintain max HNT supply.
 
-## HIP10 and Variable HNT Rewards for Network Data Transfer
+## HIP-10 and Variable HNT Rewards for Network Data Transfer
 
 As noted above,
 [HIP-10 was activated on August 24th, 2020](https://github.com/helium/HIP/blob/master/0010-usage-based-data-transfer-rewards.md).
@@ -147,15 +136,9 @@ calculation is:`(800,000,000 DC * $0.00001 / $8.00 HNT Oracle Price)`
 - All Hotspots participating in `Network Data Transfer` will earn rewards proportional to their
   share of the total data transfer in that epoch, as shown above.
 - Hotspots can earn one or more reward types during any given epoch.
-- `PoC Challenger`, `PoC Challengee`, and `Witness` reward types get distributed in the epoch that
+- `PoC Challengee` and `Witness` reward types get distributed in the epoch that
   includes the corresponding PoC receipt.
 - A Hotspots can earn more than one `PoC Challengee` and `Witness` rewards per epoch.
-- Validators use the `poc_challenge_rate` chain_var that defines the target number of Challenges per
-  block. See
-  [HIP55](https://github.com/helium/HIP/blob/main/0055-validator-challenges.md#poc-challenge-creation-and-the-consensus-group)
-  for more details.
-- `Challenger` rewards are distributed to Validators that create and collect Challenge data and
-  submit this information to the blockchain.
 
 ## HNT Proration and Slow Block Times
 
@@ -191,7 +174,7 @@ not clocks. Here's a step-by-step example to make it clearer:
 ### When Block Times Slow Down, Everyone Earns Less
 
 The most important takeaway here is that, when block times slow and HNT production is reduced,
-everyone participating in the Network - Witnesses, Challengers, Security Token Holders, etc. - **is
+everyone participating in the Network - Witnesses, Security Token Holders, etc. - **is
 impacted equally** (except for Consensus Group members; more on this below). So, although it's
 annoying that the effective rate of HNT may have dropped over a given period of time, know that
 you're not the only one earning less. And this is by design.
