--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -136,8 +136,8 @@ calculation is:`(800,000,000 DC * $0.00001 / $8.00 HNT Oracle Price)`
 - All Hotspots participating in `Network Data Transfer` will earn rewards proportional to their
   share of the total data transfer in that epoch, as shown above.
 - Hotspots can earn one or more reward types during any given epoch.
-- `PoC Challengee` and `Witness` reward types get distributed in the epoch that
-  includes the corresponding PoC receipt.
+- `PoC Challengee` and `Witness` reward types get distributed in the epoch that includes the
+  corresponding PoC receipt.
 - A Hotspots can earn more than one `PoC Challengee` and `Witness` rewards per epoch.
 
 ## HNT Proration and Slow Block Times
@@ -174,10 +174,10 @@ not clocks. Here's a step-by-step example to make it clearer:
 ### When Block Times Slow Down, Everyone Earns Less
 
 The most important takeaway here is that, when block times slow and HNT production is reduced,
-everyone participating in the Network - Witnesses, Security Token Holders, etc. - **is
-impacted equally** (except for Consensus Group members; more on this below). So, although it's
-annoying that the effective rate of HNT may have dropped over a given period of time, know that
-you're not the only one earning less. And this is by design.
+everyone participating in the Network - Witnesses, Security Token Holders, etc. - **is impacted
+equally** (except for Consensus Group members; more on this below). So, although it's annoying that
+the effective rate of HNT may have dropped over a given period of time, know that you're not the
+only one earning less. And this is by design.
 
 ### Consensus Groups and Slow Block Times
 
