historical context into foldable section

--- a/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
+++ b/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
@@ -99,9 +99,11 @@ validity, and then inject the results back into the Helium L1 blockchain for rew
 In addition, oracles interact with data and systems outside of a native blockchain environment,
 providing a solution to a fundamental limitation of smart contracts.
 
-<!--TODO: add information here -->
+<details>
+  <summary>History of PoC Roles</summary>
 
-:::info History of PoC Roles
+The Proof of Coverage model has continued to evolve to better suit the needs and capabilities of the
+Helium Network.
 
 The Consensus Group, a group of Hotspots elected by the blockchain to progress block production,
 issued challenges in early iterations of the PoC algorithm. Eventually, as the number of active
@@ -116,7 +118,7 @@ relied entirely on beaconing. A beacon was a single transmission witnessed by an
 versions used multi-hop challenge paths that didn't accurately test Hotspots' ability to capture RF
 packets.
 
-:::
+</details>
 
 ## PoC Reward Scaling
 
