notes on oracles

--- a/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
+++ b/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
@@ -35,30 +35,28 @@ the Network.
 
 ## Off-Chain Proof-of-Coverage
 
-Off-Chain Proof of Coverage ("PoC") is essential in implementing HIP-70 and the Helium Network's
-migration to the Solana blockchain and is a significant step forward in increasing the usability and
-scalability of the Network.
+:::note Off-Chain PoC Hotspot Requirements
 
-### What is Off-Chain Proof-of-Coverage?
+Off-Chain PoC will requires miner version 2022.12.13.0 or later.
 
-Off-Chain Proof-of-Coverage allows IOT Hotspots to Beacon on their own every 6 hours to participate
-in Proof-of-Coverage, eliminating the need for Validator Challenges and ensuring more reliable
-Beacon events.
+:::
 
-### What is Off-Chain about this?
+Off-Chain Proof-of-Coverage allows Hotspots to Beacon on their own every 6 hours to participate in
+Proof-of-Coverage, eliminating the need for Validator Challenges and ensuring more reliable Beacon
+events.
 
-Off-Chain PoC moves the responsibility of validating all PoC events to dedicated Oracles. Oracles
-are powerful machines that ingest completed challenges, verify challenges and, witness validity,
-then inject the results back into the Helium L1 blockchain for rewards to be issued.
+Off-Chain PoC moves the responsibility of validating all PoC events to dedicated Oracles, powerful
+machines that ingest completed challenges, verify challenges and, witness validity, then inject the
+results back into the Helium L1 blockchain for rewards to be issued.
 
 Oracles interact with data and systems outside of a native blockchain environment where the
 processing can be completed much more efficiently and at scale, providing a solution to a
 fundamental limitation of smart contracts.
 
-### How does this change Rewards?
+Off-Chain PoC is essential in implementing HIP-70 and the Helium Network's migration to the Solana
+blockchain and is a significant step forward in increasing the usability and scalability of the
+Network.
 
-Oracles enable IOT Hotspots to Beacon more often. At the same time, daily HNT emissions for
-participating in Proof-of-Coverage will remain the same.
 
 What happens to Challenger Rewards?
 
