remove challenger references

--- a/docs/blockchain/consensus-protocol/consensus-protocol.mdx
+++ b/docs/blockchain/consensus-protocol/consensus-protocol.mdx
@@ -75,19 +75,18 @@ For a more complete overview of how Validators are elected to the consensus grou
 
 At the end of each epoch, mining rewards are distributed by the consensus group to the wallet
 addresses that have earned them. Currently `65%` of all mining rewards go to the hotspot
-infrastructure \(with the remaining `35%` being distributed network investors\). A graphical 
+infrastructure \(with the remaining `35%` being distributed network investors\). A graphical
 overview of token reward system can be [viewed here](https://www.helium.com/tokens).
 
 During the course of any epoch, Hotspots are rewarded for the following list of activities:
 
-- Successful participation in proof of coverage as a target \(as a “challengee”\)
+- Successful participation in proof of coverage as a target
 - Witnessing a proof of coverage challenge
 - Transferring device data over the network
 
 During the course of any epoch, Validators are rewarded for the following list of activities per
 changes from [HIP 55](https://github.com/helium/HIP/blob/main/0055-validator-challenges.md):
 
-- Submitting valid proof of coverage challenges \(as a “challenger”\)
 - Serving as consensus group member
 
 The Consensus Group then splits `6%` of all HNT mined, as well as any transaction fees collected
