--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -25,13 +25,13 @@ Every epoch, the current consensus group mines approximately 30 blocks on the bl
 block, Hotspots perform various types of work and are awarded according to the following
 distribution:
 
-| Reward Type           | Chain Variable          | Description                                                                                                        |
-| :-------------------- | :---------------------- | :----------------------------------------------------------------------------------------------------------------- |
-| PoC Challengees       | poc_challengees_percent | Awarded to any Hotspot that transmits a PoC packet.                                                                |
-| Witnesses             | poc_witnesses_percent   | Distributed to selected Hotspots that witness a beacon packet.                                                     |
-| Consensus Group       | consensus_percent       | Divided equally among the Validators that are part of the outgoing Consensus Group, responsible for mining blocks. |
-| Security              | securities_percent      | Awarded to Network investors who hold Security Tokens.                                                             |
-| Network Data Transfer | dc_percent              | Distributed each epoch to Hotspots that route LoRaWAN sensor data for sensors on the Network during that epoch.    |
+| Reward Type           | Chain Variable            | Description                                                                                                        |
+| :-------------------- | :------------------------ | :----------------------------------------------------------------------------------------------------------------- |
+| PoC Challengees       | `poc_challengees_percent` | Awarded to any Hotspot that transmits a PoC packet.                                                                |
+| Witnesses             | `poc_witnesses_percent`   | Distributed to selected Hotspots that witness a beacon packet.                                                     |
+| Consensus Group       | `consensus_percent`       | Divided equally among the Validators that are part of the outgoing Consensus Group, responsible for mining blocks. |
+| Security              | `securities_percent`      | Awarded to Network investors who hold Security Tokens.                                                             |
+| Network Data Transfer | `dc_percent`              | Distributed each epoch to Hotspots that route LoRaWAN sensor data for sensors on the Network during that epoch.    |
 
 **_Do I Have To Actively Participate to Earn Rewards Once My Hotspot is Deployed?_**
 
