remove gRPC notes

--- a/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
+++ b/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
@@ -80,7 +80,7 @@ proximate Hotspots.
 
 Hotspots that are geographically proximate to the Beaconer and report the existence of the
 transmitted challenge packet. Any Hotspot hearing the transmitted packet will serve as a Witness and
-submit their Witness report over gRPC.
+submit their Witness report to the Oracle.
 
 ### Oracle
 
