remove challenger role and update challenger previous reward rate

--- a/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
+++ b/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
@@ -59,7 +59,7 @@ Network.
 
 Validators were previously awarded Challenger Rewards for creating Proof of Coverage challenges.
 These rewards are now redistributed to Hotspots as part of the Proof-of-Coverage pool, returning the
-0.9% of overall HNT rewards to Validators to Beaconing and Witnessing Hotspots.
+0.85% of overall HNT rewards to Validators to Beaconing and Witnessing Hotspots.
 
 :::
 
@@ -72,9 +72,8 @@ PoC Challenges involve three distinct roles:
 
 ### Beaconer
 
-Sometimes called the "Challengee", this Hotspot is the target of the POC challenge. It is
-responsible for transmitting (or "beaconing") challenge packets to be witnessed by geographically
-proximate Hotspots.
+Hotspots "Self Beacon" transmitting (or "beaconing") challenge packets to be witnessed by
+geographically proximate Hotspots.
 
 ### Witness
 
