post merge with master line wrap fixes

--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -10,9 +10,9 @@ slug: /mine-hnt/validators/validators-and-voting-power
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-The Helium Foundation is progressing in implementing HIP-70 and migrating our L1 to Solana.
-This documentation on staking and lock-up is subject to updates and modifications before the 
-migration date. 
+The Helium Foundation is progressing in implementing HIP-70 and migrating our L1 to Solana. This
+documentation on staking and lock-up is subject to updates and modifications before the migration
+date.
 
 :::info
 
@@ -24,11 +24,11 @@ hosted on Twitter Spaces for the most up-to-date progress on the L1 transition.
 Validators remain critical for the ongoing operation of the Helium Network and continue to earn HNT
 rewards for their role in supporting the Helium ecosystem until the L1 transition is complete.
 
-Validators currently maintain the Network and provide vital operations, including validating 
-transactions and producing blocks from which all Network participants benefit. 
-One of the impacts of the passing of HIP-70 and transitioning L1 is that the role
-Validators play as we know it today will no longer be required, and Validators will be sunset by the
-end of Q1 2023 after the transition is complete.
+Validators currently maintain the Network and provide vital operations, including validating
+transactions and producing blocks from which all Network participants benefit. One of the impacts of
+the passing of HIP-70 and transitioning L1 is that the role Validators play as we know it today will
+no longer be required, and Validators will be sunset by the end of Q1 2023 after the transition is
+complete.
 
 Validators who remain staked receive new vote escrowed tokens (veHNT) based on their staked HNT
 amount and lock-up period. Post-migration, veHNT will be the only way to vote in the Helium Network.
@@ -114,7 +114,7 @@ to a subDAO will count towards the DAO Utility Score, the `V` value referenced i
 
 :::note Utitily Score impacts HNT Proportion for a subDAO
 
-The higher the DAO Utility Score in relation to the DAO Utility score of other SubDAOs, the higher 
+The higher the DAO Utility Score in relation to the DAO Utility score of other SubDAOs, the higher
 the proportion of HNT earned by the individual subDAO treasury each epoch.
 
 :::
@@ -152,7 +152,7 @@ the 6-month lock-up as a reward for ongoing staking in the Network.
 ### Where Does My HNT Go if I Stake veHNT?
 
 If you lock-up your HNT for veHNT, your HNT will become veHNT and remain entirely in your wallet's
-custody. veHNT ownership is represented by a non transferable Solana NFT held in your wallet. At the 
+custody. veHNT ownership is represented by a non transferable Solana NFT held in your wallet. At the
 end of the lock-up period, you will receive HNT back to your wallet 1:1 for the HNT you staked.
 
 ### What Is a "Lock-Up" Period?
@@ -160,8 +160,8 @@ end of the lock-up period, you will receive HNT back to your wallet 1:1 for the 
 A lock-up period is a window of time when users are not allowed to transfer their HNT.
 
 You will incur a lock-up period when you stake your HNT for veHNT. The lock-up period is between 6
-and 48 months selectable in days but with block granularity. 
-The minimum lock-up period is subject to  change between now and the migration date. 
+and 48 months selectable in days but with block granularity. The minimum lock-up period is subject
+to change between now and the migration date.
 
 Lock-up periods help incentivize long-term holders of HNT and deter short-term speculators and those
 with shorter-term interests in the governance of the Network.
@@ -192,10 +192,10 @@ amount of net subDAO token earnings as delegators share the 6% subDAO token emis
 
 ### How Will Staking Work By Using veHNT?
 
-Anyone can stake any amount of HNT and lock it up for six months (subject to possible change) to 
-four years. You choose your unstaking date at the time of lock-up or deciding to keep it on a rolling 
-lock-up period, called "constant lock-up" before initiating the start or the veHNT decay process. 
-The HNT staked is exchanged for veHNT, which provides two benefits:
+Anyone can stake any amount of HNT and lock it up for six months (subject to possible change) to
+four years. You choose your unstaking date at the time of lock-up or deciding to keep it on a
+rolling lock-up period, called "constant lock-up" before initiating the start or the veHNT decay
+process. The HNT staked is exchanged for veHNT, which provides two benefits:
 
 - Voting in the Helium DAO on new subDAO proposals.
 - Participating in the Governance of the Helium DAO.
@@ -210,7 +210,7 @@ rules.
 The Helium Network encourages your long-term participation in voting and governance. Those who stake
 HNT for six months will exchange 1:1 HNT to veHNT. Those that stake veHNT for 48 months will receive
 an exchange of 1:100 HNT to veHNT. Any period in between will be treated on a linear scale from 1
-to 100. 
+to 100.
 
 > For example, I choose to lock-up 10 HNT for six months. I receive 10 veHNT. If I decide to unstake
 > immediately, after six months, my veHNT decays to 0 until my 10 HNT unlocks and is available to me
@@ -218,18 +218,17 @@ to 100.
 
 :::note Lock-up exchange rates subject to change
 
-Proposals are in review and subject to vote to change the linear scale from 0-100 over 48 months 
-not 1-100 over 42 months.
+Proposals are in review and subject to vote to change the linear scale from 0-100 over 48 months not
+1-100 over 42 months.
 
 :::
 
-An amount of locked-up veHNT is a Position and it is possible to own multiple Positions in your wallet.
-Actions taken on locked-up veHNT like delegating, voting, lock-up periods are an all or nothing option.
-If a veHNT owner would like to to recieve rewards from two SubDAOs then the veHNT Position would need to 
-be split into two Positions by transfering some veHNT to a send position within the same wallet and then 
-each position could delegate to different Positions.
-Similarly wishing to extend the lock-up period on parts of a Position requires a similar split by transfer.
-
+An amount of locked-up veHNT is a Position and it is possible to own multiple Positions in your
+wallet. Actions taken on locked-up veHNT like delegating, voting, lock-up periods are an all or
+nothing option. If a veHNT owner would like to to recieve rewards from two SubDAOs then the veHNT
+Position would need to be split into two Positions by transfering some veHNT to a send position
+within the same wallet and then each position could delegate to different Positions. Similarly
+wishing to extend the lock-up period on parts of a Position requires a similar split by transfer.
 
 ### How Can I Obtain veHNT?
 
@@ -243,7 +242,7 @@ Check out a [DAO beta view](https://dao-beta.mango.markets/dao/MNGO) on Realms t
 
 ### Is There a Staking "Genesis" Period?
 
-For the first seven days after Helium's migration onto Solana, there will be a 3x multiplier bonus 
+For the first seven days after Helium's migration onto Solana, there will be a 3x multiplier bonus
 for new veHNT stakers.
 
 New stakers are only eligible to receive this a veHNT bonus during the initial seven-day "Genesis"
@@ -261,8 +260,8 @@ For example:
 
 Validator owners can also take advantage of the 7 day bonus period and get the 3x bonus reapplied if
 they extend their default 6 month lock-up period. This 3x bonus will be removed if they extend the
-lock-up further after the initial seven days, or veHNT is transfered to another staking position after 
-the 7 day period.
+lock-up further after the initial seven days, or veHNT is transfered to another staking position
+after the 7 day period.
 
 ### Will I Earn HNT by Staking For veHNT?
 
@@ -295,7 +294,7 @@ This process should be simple in the [Helium Wallet App](/wallets/helium-wallet-
 instructions will be provided on Realms usage as we get closer to the Solana migration.
 
 The Helium Wallet App will be Solana compatible. All staking and vote escrow delegation operations
-will be performed within a Solana-compatible Wallet App/Realms or a new version of the 
+will be performed within a Solana-compatible Wallet App/Realms or a new version of the
 [Helium CLI Wallet](/wallets/cli-wallet).
 
 - Staking HNT to veHNT
@@ -309,13 +308,12 @@ will be performed within a Solana-compatible Wallet App/Realms or a new version 
 
 The table below shows the approximate HNT to veHNT multiplier for each month of starting a stake.
 
-This value is multiplied by 3x during the first 7 days after the Solana transition and this 
-multiplier lasts as long as the last lock-up period selected in the first 7 days after the solana 
+This value is multiplied by 3x during the first 7 days after the Solana transition and this
+multiplier lasts as long as the last lock-up period selected in the first 7 days after the solana
 migration.
 
-N/A = Not applicable. 
-There is Currently a minium period of 6 months lock-up.
-This is subject to change and the table below will be updated.
+N/A = Not applicable. There is Currently a minium period of 6 months lock-up. This is subject to
+change and the table below will be updated.
 
 | Months staked | veHNT received |     | Months staked | veHNT received |     | Months staked | veHNT received |     | Months staked | veHNT received |
 | :-----------: | :------------: | --- | :-----------: | :------------: | --- | :-----------: | :------------: | --- | :-----------: | :------------: |
@@ -338,7 +336,7 @@ No. You can hold your veHNT as is or delegate to a subDAO at any time.
 
 :::note
 
-Changing delegation is allowed, but any delegation changes within a Solana Epoch will void any 
+Changing delegation is allowed, but any delegation changes within a Solana Epoch will void any
 delegation rewards within that Epoch. A Solana Epoch is 24 hours long.
 
 :::
@@ -355,14 +353,14 @@ A 48-month lock-in period has approximately 1461 linear steps between 100 veHNT 
 > 4 years x 365.25 days epochs per day = 1461 steps
 
 After 30 mins has passed after staking a single 1 HNT for 48 months, the quantity of veHNT in the
-wallet will decay from 100 veHNT to 99.998575 veHNT. This decrease will recur linearly over
-all the remaining 48 months until it hits zero.
+wallet will decay from 100 veHNT to 99.998575 veHNT. This decrease will recur linearly over all the
+remaining 48 months until it hits zero.
 
 ### Can I Increase My Staking Lock-up Period At Any Time?
 
 Yes. You can increase your lock-up period to the maximum of 48 months at any time, and each increase
-activates at the next epoch. If the veHNT is delegated you must undelegate, change the period and 
-redelegate and lose delegation rewards within that 24 hour Epoch. If those three actions take longer 
+activates at the next epoch. If the veHNT is delegated you must undelegate, change the period and
+redelegate and lose delegation rewards within that 24 hour Epoch. If those three actions take longer
 than an epoch or are split over two epochs then delegation rewards are lost for two Epochs.
 
 ### Can I Decrease My Staking Period For Fast Access to My HNT and Take a Penalty?
@@ -372,7 +370,7 @@ period for any reason.
 
 ### Can I Automate Re-Staking?
 
-Yes a constant rolling lock-up period will be the default option called Constant Lock-up. The decay 
+Yes a constant rolling lock-up period will be the default option called Constant Lock-up. The decay
 countdown start point will be positive action needed to start the lock-up cooldown period.
 
 > Staking 10 HNT for 4 years will get approx 1000 veHNT and this will be a rolling 1 year period and
